# deneg-lib

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
draw8/: CMakeLists.txt
draw8/include/: color-conv.h  draw8.h
draw8/src/: color-conv.c  draw8.c  geom.c  geometry.c  text-box.c  text.c
drivers/button-driver/: CMakeLists.txt
drivers/button-driver/include/: button-driver.h
drivers/button-driver/src/: button-driver.c
drivers/button-driver/tests/: test-button-driver.cpp
drivers/encoder-driver/: CMakeLists.txt
drivers/encoder-driver/include/: encoder-driver.h
drivers/encoder-driver/src/: encoder-driver.c
drivers/ssd1306-driver/: CMakeLists.txt
drivers/ssd1306-driver/include/: ssd1306-driver.h  ssd1306-fonts.h  ssd1306-regs.h
drivers/ssd1306-driver/src/: ssd1306-driver.c
drivers/st7789-driver/: CMakeLists.txt
drivers/st7789-driver/include/: st7789-driver.h
drivers/st7789-driver/src/: st7789-driver.c
drivers/st7789-driver/tests/: CMakeLists.txt  test-st7789-driver.cpp
drivers/tmp112-driver/: CMakeLists.txt
drivers/tmp112-driver/include/: tmp112-driver.h  tmp112-regs.h
drivers/tmp112-driver/src/: tmp112-driver.c
math/position-calc/: CMakeLists.txt
math/position-calc/include/: position-calc.h
math/position-calc/src/: position-calc.c
tests/drivers/: CMakeLists.txt  test-button-driver.cpp  test-encoder-driver.cpp  test-tmp112-driver.cpp
utils/deneg-button/: CMakeLists.txt
utils/deneg-button/include/: deneg-button.h
utils/deneg-button/src/: deneg-button.c
utils/deneg-button/tests/: CMakeLists.txt  test_deneg-button.cpp
